force-app/main/default/objects/Offre__c/Offre__c.object-meta.xml
<CustomObject>
    <label>Offre</label>
    <nameField>
        <label>Offre Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>offres</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>