force-app/main/default/objects/Offre__c/fields/CompetencesRequises__c.field-meta.xml
<CustomField>
    <fullName>CompetencesRequises__c</fullName>
    <label>CompetencesRequises</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>