force-app/main/default/objects/Offre__c/fields/Date_Cloture__c.field-meta.xml
<CustomField>
    <fullName>Date_Cloture__c</fullName>
    <label>Date_Cloture</label>
    <type>Date</type>
</CustomField>