force-app/main/default/objects/Offre__c/fields/TypeOffre__c.field-meta.xml
<CustomField>
    <fullName>TypeOffre__c</fullName>
    <label>TypeOffre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interne</fullName>
            </value>
            <value>
                <fullName>Externe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>