force-app/main/default/objects/Offre__c/fields/Visible_aux_candidat__c.field-meta.xml
<CustomField>
    <fullName>Visible_aux_candidat__c</fullName>
    <label>Visible_aux_candidat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visible</fullName>
            </value>
            <value>
                <fullName>Invisible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>