force-app/main/default/objects/Offre__c/validationRules/Deadline_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Deadline_In_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Deadline__c &lt; Today(),
 NOT(ISPICKVAL(Statut__c, 'Clôturée'))
)</errorConditionFormula>
    <errorDisplayField>Deadline__c</errorDisplayField>
    <errorMessage>La date limite doit être ultérieure à aujourd’hui</errorMessage>
</ValidationRule>