force-app/main/default/objects/Offre__c/validationRules/up_vis_invi_clot.validationRule-meta.xml
<ValidationRule>
    <fullName>up_vis_invi_clot</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Statut__c, &quot;clôturée&quot;),
    ISPICKVAL(Visible_aux_candidat__c, &quot;Visible&quot;)
)</errorConditionFormula>
    <errorMessage>..</errorMessage>
</ValidationRule>