force-app/main/default/objects/Offre__c/validationRules/Verrouiller_Nom_Offre.validationRule-meta.xml
<ValidationRule>
    <fullName>Verrouiller_Nom_Offre</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED(Name))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Le nom de l’offre est figé et ne peut pas être modifié.</errorMessage>
</ValidationRule>