force-app/main/default/objects/Offre__c/validationRules/VR_Deadline_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Deadline_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISBLANK( Deadline__c )),
 Deadline__c &lt;= TODAY(),
 NOT(ISPICKVAL(Statut__c, 'Clôturée'))
)</errorConditionFormula>
    <errorMessage>La date doit être strictement supérieure à aujourd’hui</errorMessage>
</ValidationRule>